update: 去除部分接口鉴权
