# docs/swagger.json
@@ -97,11 +97,6 @@
         },
         "/category/get": {
             "get": {
-                "security": [
-                    {
-                        "ApiKeyAuth": []
-                    }
-                ],
                 "description": "获取分类",
                 "consumes": [
                     "application/json"
@@ -140,11 +135,6 @@
         },
         "/category/list": {
             "get": {
-                "security": [
-                    {
-                        "ApiKeyAuth": []
-                    }
-                ],
                 "description": "获取分类列表",
                 "consumes": [
                     "application/json"
@@ -323,11 +313,6 @@
         },
         "/video/get": {
             "get": {
-                "security": [
-                    {
-                        "ApiKeyAuth": []
-                    }
-                ],
                 "description": "获取视频",
                 "consumes": [
                     "application/json"
@@ -366,11 +351,6 @@
         },
         "/video/list": {
             "get": {
-                "security": [
-                    {
-                        "ApiKeyAuth": []
-                    }
-                ],
                 "description": "获取视频列表",
                 "consumes": [
                     "application/json"
